This file includes the changes to be made by harsh or danish

//Danish

1. Change the footer section . In contact us form do only bottom border. Rest three sides No border.//done
2. To fix the bug in faq page when page opened first ques is already open and 4th ques opens answer of third ques //fixed
3. T0 make aside section on personal banking page. (Read personal banking once).//almost done
4. To make all forms as bootstrap forms.
5. To make blogs in cards.// searching for answers
6. To make fields like nationality, Dob, gender.//done
7. To make recent transactions page more decorative and rest all other pages.
8. To set specific colors and buttons,text  orientation on every page.
9. To find more content for home page and the crousel photos.
==============================================================================

//Harsh

1111. make one table for recent transactions.
2222.FeedBack bata ek baar color chek kar ke
1. A place to open calculator
2. Money converter
==============================================================================

Colors for Headers 

1. mehroon type : #571346
2. reddish : #9D1D27


==============================================================================

Colors for footers : 

==============================================================================
Others

on hover over aside section links(links color white) : #1DB954 = green