@@ -8,6 +8,8 @@
       <a href="/user/account-details/<%= user._id %>">Account Details</a>
       <a href="/user/balance/<%=user._id%>">Check Balance</a>
       <a href="/play-game">Play to Earn</a>
+      <a href="/user/money/request">Request money</a>
+
     </div>
 
     <div>
