@@ -1,0 +1,101 @@
+<a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <i class="fa fa-bell"></i>
+  </a>
+    <ul class="dropdown-menu">
+      <li class=" text-light bg-dark">
+        <div class="row">
+          <div class="col-lg-12 col-sm-12 col-12">
+            <span>Notifications (3)</span>
+            <a href="" class="float-right text-light">Mark all as read</a>
+          </div>
+      </li>
+      <li class="notification-box">
+        <div class="row">
+          <div class="col-lg-3 col-sm-3 col-3 text-center">
+            <img src="/demo/man-profile.jpg" class="w-50 rounded-circle">
+          </div>    
+          <div class="col-lg-8 col-sm-8 col-8">
+            <strong class="text-info">David John</strong>
+            <div>
+              <% if(locals.user) { %> 
+                
+                <ol>
+                  <h3 style="margin-left: 40px;">Recent Notifications</h3>
+                  <% for(request of all_requests) { %> 
+          
+                    <li>
+                      <p> 
+                        <% if(request.completed == false) { %> 
+                          <% if(request.sender.name == user.name) { %> 
+                            
+                            <h5> Request for money sent to <%= request.receiver.name %> </h5>
+                            <h5 style="color: yellow;">Status Pending</h5> 
+                          
+                          <% } else { %> 
+                            <h5> <%= request.sender.name %> Requested <%= request.amount%> Rupees </h5>
+                            <a href="/user/money/request-money-transfer/<%= request._id %>"> <h5 style="color: green;">Tranfer Money</h5> </a> 
+                          <% } %>
+
+                            
+                        <% } else { %> 
+                         
+                          <% if(request.sender.name == user.name) { %> 
+                            
+                            <h5> Request for money sent to <%= request.receiver.name %> </h5>
+                            <h5 style="color: green;">Status : Money Received</h5> 
+                          
+                          <% } else { %> 
+                            <h5> <%= request.sender.name %> Requested <%= request.amount%> Rupees </h5>
+                            <h5 style="color: green;">Status : Money Tranferred</h5>  
+
+                          <% } %>
+                          
+                        <% } %>
+                      </p> 
+                      
+                    </li>
+                    
+                  <% } %>
+          
+                </ol>
+
+              <% } else { %> 
+                <h5>Abhi Ni</h5>
+              <% } %>
+            </div>
+            <small class="text-warning">27.11.2015, 15:00</small>
+          </div>    
+        </div>
+      </li>
+      <li class="notification-box bg-gray">
+        <div class="row">
+          <div class="col-lg-3 col-sm-3 col-3 text-center">
+            <img src="/demo/man-profile.jpg" class="w-50 rounded-circle">
+          </div>    
+          <div class="col-lg-8 col-sm-8 col-8">
+            <strong class="text-info">David John</strong>
+            <div>
+              Lorem ipsum dolor sit amet, consectetur
+            </div>
+            <small class="text-warning">27.11.2015, 15:00</small>
+          </div>    
+        </div>
+      </li>
+      <li class="notification-box">
+        <div class="row">
+          <div class="col-lg-3 col-sm-3 col-3 text-center">
+            <img src="/demo/man-profile.jpg" class="w-50 rounded-circle">
+          </div>    
+          <div class="col-lg-8 col-sm-8 col-8">
+            <strong class="text-info">David John</strong>
+            <div>
+              Lorem ipsum dolor sit amet, consectetur
+            </div>
+            <small class="text-warning">27.11.2015, 15:00</small>
+          </div>    
+        </div>
+      </li>
+      <li class="footer bg-dark text-center">
+        <a href="" class="text-light">View All</a>
+      </li>
+    </ul>
