@@ -15,7 +15,7 @@
         <div>
             <h4>Account Number : <%= user.account_number %></h4>
                 <button><a href="/user/update-details">Update Account Details</a></button></div>
-            <% } else { %>
+        <% } else { %>
             <button><a href="/user/login">LOGIN</a></button>
         <% } %>
         
